infrastructure/networking/traefik/ingress-routes/argo-cd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-https
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.home.mkdevops.online`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          scheme: https  # Important for ArgoCD since it uses TLS on the service
  tls:
    secretName: argocd-tls
